# bit_torrent

./: .gitignore  Cargo.toml  README.md  create_torrent.sh  docker-compose.yaml  run_peer.sh
async_torrent/: .gitignore  Cargo.toml
async_torrent/src/: app.rs  bencode.rs  central_manager.rs  files.rs  main.rs  peers.rs  peers_task.rs  tracker.rs  utils.rs
async_torrent/src/engine/: central_manager.rs  events.rs  files.rs  mod.rs  peers.rs  peers_task.rs  tracker.rs
async_torrent/src/engine/network/: udp.rs
async_torrent/src/network/: http.rs  udp.rs
async_torrent/src/tui/: app_state.rs  mod.rs  ui.rs
bit_torrent_async/: .gitignore  Cargo.toml
bit_torrent_sync/: Cargo.toml
bit_torrent_sync/src/: bencode.rs  network.rs
src/: bencode.rs  download.rs  io.rs  main.rs  network.rs  peers.rs  tracker.rs
sync_torrent/: Cargo.toml
sync_torrent/src/: main.rs
