[package]
name = "async_torrent"
version = "0.1.0"
edition = "2024"

[dependencies]
bytesize = { version = "2.3.1", features = [ "arbitrary", "serde" ] }
rand = "0.9.2"
ratatui = "0.30.0"
reqwest = { version = "0.12.24" }
serde = "1.0.228"
serde_bencoded = "0.3.2"
serde_bytes = "0.11.19"
sha1 = "0.10.6"
tokio = { version = "1.48.0", features = [ "full" ] }
url = "2.5.7"
urlencoding = "2.1.3"
